Fix window overflow bug

--- a/frontend/src/components/nav/nav.module.scss
+++ b/frontend/src/components/nav/nav.module.scss
@@ -7,7 +7,7 @@
     height: 60px;
     justify-content: center;
     position: relative;
-    width: 100vw;
+    width: 100%;
 
     .container {
         align-items: center;
